# Talespire

./: .clang-format  CMakeLists.txt  README.md
cmake/: deployment.cmake  helper.cmake  package.cmake
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/readerApp/: CMakeLists.txt  main.cpp  qml.qrc
src/apps/readerApp/app/: mainApplication.qml
src/apps/readerApp/controllers/: ReaderCtrl.cpp  ReaderCtrl.hpp
src/apps/readerApp/models/: AssetModel.cpp  AssetModel.hpp  LayoutModel.cpp  LayoutModel.hpp
src/apps/readerApp/pages/: ReaderPage.qml  qmldir
src/apps/readerApp/widgets/: AssetDelegate.qml  ImageDisplayWidget.cpp  ImageDisplayWidget.hpp  LayoutDelegate.qml  ListViewWidget.qml  LoadingPopupWidget.qml  PopupWidget.qml  SearchableComboBox.qml  qmldir
src/libs/: CMakeLists.txt
src/libs/core/: Asset.cpp  Asset.hpp  AssetsDatabase.cpp  AssetsDatabase.hpp  CMakeLists.txt  Layout.cpp  Layout.hpp  log.cpp  log.hpp  utils.cpp  utils.hpp
src/libs/core/tests/: CMakeLists.txt  utils_test.cpp
src/libs/reader/: CMakeLists.txt  base64.cpp  base64.hpp  gzip.cpp  gzip.hpp  reader.cpp  reader.hpp  utils.hpp  writer.cpp  writer.hpp
src/libs/reader/tests/: CMakeLists.txt  base64_test.cpp  gzip_test.cpp  reader_test.cpp  utils_test.cpp  writer_test.cpp
thirdparties/: CMakeLists.txt
